add abc to predictions

--- a/output/combined_predict_ti.tex
+++ b/output/combined_predict_ti.tex
@@ -1,19 +1,25 @@
-\begin{tabular}{lcccc} \toprule
- & (1) & (2) & (3) & (4)  \\
-Group Matched   & Control & Treatment & Control & Treatment \\ 
-Auxiliary Sample & \multicolumn{2}{c}{CNLSY} & \multicolumn{2}{c}{NLSY79}  \\  \midrule 
-Male & -167.28*** & -166.06*** & -515.30*** & -515.46*** \\
- & (36.72) & (35.08) & (155.70) & (155.49) \\
-Black & 116.95*** & 123.03*** & 136.30 & 135.77 \\
- & (44.04) & (42.49) & (143.46) & (143.13) \\
-Education (30) & -44.70*** & -43.84*** & -103.94** & -103.93** \\
- & (6.38) & (6.15) & (42.35) & (42.23) \\
-Transfer Income (21)& 0.11*** & 0.11*** & 0.11*** & 0.11*** \\
- & (0.03) & (0.03) & (0.03) & (0.03) \\
-Lagged Transfer Income & 0.63*** & 0.64*** & 0.64*** & 0.64*** \\
- & (0.03) & (0.03) & (0.04) & (0.04) \\
-Constant & 871.56*** & 855.82*** & 1,950.42*** & 1,950.78*** \\
- & (101.41) & (97.62) & (600.85) & (599.32) \\ \\ \midrule
-Observations & 7,127 & 8,306 & 1,539 & 1,539 \\
-$R^2$  & 0.48 & 0.48 & 0.58 & 0.57 \\ \bottomrule
+\begin{tabular}{lcccccc} \hline
+ & (1) & (2) & (3) & (4) & (5) & (6) \\
+ & nlsytransferc & nlsytransfert & psidtransferc & psidtransfert & abctransferc & abctransfert \\
+VARIABLES & si30y\_inc\_trans\_pub & si30y\_inc\_trans\_pub & si30y\_inc\_trans\_pub & si30y\_inc\_trans\_pub & si30y\_inc\_trans\_pub & si30y\_inc\_trans\_pub \\ \hline
+ &  &  &  &  &  &  \\
+male & -167.28*** & -166.06*** & -515.30*** & -515.46*** & -2,116.21** & -3,707.83** \\
+ & (36.72) & (35.08) & (155.70) & (155.49) & (953.96) & (1,676.07) \\
+black & 116.95*** & 123.03*** & 136.30 & 135.77 &  &  \\
+ & (44.04) & (42.49) & (143.46) & (143.13) &  &  \\
+years\_30y & -44.70*** & -43.84*** & -103.94** & -103.93** & -92.90 & -210.61 \\
+ & (6.38) & (6.15) & (42.35) & (42.23) & (276.94) & (436.07) \\
+laggedtransfer & 0.11*** & 0.11*** & 0.11*** & 0.11*** &  &  \\
+ & (0.03) & (0.03) & (0.03) & (0.03) &  &  \\
+llaggedtransfer & 0.63*** & 0.64*** & 0.64*** & 0.64*** & 0.02 & 0.21 \\
+ & (0.03) & (0.03) & (0.04) & (0.04) & (0.06) & (0.27) \\
+piatmath &  &  &  &  & -32.17 & -128.36 \\
+ &  &  &  &  & (29.17) & (81.86) \\
+o.laggedtransfer &  &  &  &  & - & - \\
+ &  &  &  &  &  &  \\
+Constant & 871.56*** & 855.82*** & 1,950.42*** & 1,950.78*** & 6,795.19 & 18,774.87** \\
+ & (101.41) & (97.62) & (600.85) & (599.32) & (4,502.87) & (8,037.06) \\
+ &  &  &  &  &  &  \\
+Observations & 7,127 & 8,306 & 1,539 & 1,539 & 48 & 45 \\
+ R-squared & 0.48 & 0.48 & 0.58 & 0.57 & 0.10 & 0.22 \\ \hline
 \end{tabular}
