--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -265,7 +265,7 @@ Let $\mathcal{L}$ be the set of blocks. Under the null hypothesis of no treatmen
 
 ABC/CARE has a multiplicity of treatment effects corresponding to all of the measures collected in the multiple waves of the longitudinal surveys.\footnote{For estimates of treatment effects for each outcome analyzed, see Appendix~\ref{appendix:results}.} Reporting these treatment effects in the text would overwhelm the reader. Here we report estimates of the main treatment effects that underlie our benefit/cost and rate of return analyses.\footnote{Appendix~\ref{appendix:results} reports treatment effects and step-down $p$-values for all the outcomes analyzed. These account for multiple hypothesis testing as in \citet{Lehman_Romano_2005_AnnStat} and \citet{Romano_Shaikh_2006_AnnStat}.}
 
-Evidence from ABC/CARE and many other early childhood programs is often criticized because of their small sample sizes.\footnote{See, e.g., \cite{Murray_2013_GivingKids_JJHBOOK}.} An extensive analysis reported in \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} shows that asymptotic inference and small sample permutation-based inference closely agree when applied to ABC/CARE data. For this reason, we use large sample inference throughout this paper.\footnote{Unless otherwise specified, the inference we present throughout the paper is based on $1,000$ draws from the empirical bootstrap distribution. $p$-values are one-sided, non-parametric. We highlight values when estimates are significant at $10\%$. For estimations using combining different datasets, we bootstrap all datasets and combine them to form bootstrap draws. We bootstrap at the individual level, i.e. we ``block'' bootstrap at the individual level given the longitudinal data of our experimental and auxiliary datasets. Inference based on permutation tests is available on request.} We adjust all estimates for sample attrition using Horvitz--Thompson \citeyearpar{Horvitz_Thompson_1952_JASA} inverse probability estimators (see Appendix~\ref{appendix:attrition} for details).
+Evidence from ABC/CARE and many other early childhood programs is often criticized because of their small sample sizes.\footnote{See, e.g., \cite{Murray_2013_GivingKids_JJHBOOK}.} An extensive analysis reported in \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} shows that asymptotic inference and small sample permutation-based inference closely agree when applied to ABC/CARE data. For this reason, we use large sample inference throughout this paper.\footnote{Unless otherwise specified, the inference we present throughout the paper is based on $1,000$ draws from the empirical bootstrap distribution. $p$-values are one-sided, non-parametric. We highlight values when estimates are significant at $10\%$. For estimations using combining different datasets, we bootstrap all datasets and combine them to form bootstrap draws. We bootstrap at the individual level, i.e. we ``block'' bootstrap at the individual level given the longitudinal data of our experimental and auxiliary datasets. Inference based on permutation tests is available on request. For precise details on the construction of our inference procedures throughout the paper, see Appendix C.6.} We adjust all estimates for sample attrition using Horvitz--Thompson \citeyearpar{Horvitz_Thompson_1952_JASA} inverse probability estimators (see Appendix~\ref{appendix:attrition} for details).
 
 \subsection{Estimated Treatment Effects}
 
@@ -410,7 +410,7 @@ We now present our analytical framework and its underlying assumptions. Our anal
 \begin{equation}\label{eq:outcome}
 Y^d_{k,j,a} = \phi^d_{k,j,a} (\bm{X}^d_{k,a}, \bm{B}_k) + \varepsilon^d_{k,j,a}, \quad j \in \mathcal{J}_a.
 \end{equation}
-$\phi^d_{k,j,a}\left( \cdot, \cdot \right)$ is an invariant structural production relationship mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into output $Y^d_{k,j,a}$ holding error term $\varepsilon^d_{k,j,a}$ fixed.\footnote{Fixing and conditioning are fundamentally different concepts. See \cite{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometTheory} for discussions. Our analysis applies to the methodology in that paper.} We normalize $\varepsilon^d_{k,i,j}$ to have mean zero. Among the $\bm{X}^d_{k,a}$ are variables caused by treatment, including lagged dependent variables. The relationships between the dependent and right-hand side variables in \eqref{eq:outcome} do not necessarily coincide across the samples.
+$\phi^d_{k,j,a}\left( \cdot, \cdot \right)$ is an invariant structural production relationship mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into output $Y^d_{k,j,a}$ holding error term $\varepsilon^d_{k,j,a}$ fixed.\footnote{Fixing and conditioning are fundamentally different concepts. See \cite{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometTheory} for discussions. Our analysis applies to the methodology in that paper.} We normalize $\varepsilon^d_{k,j,a}$ to have mean zero. Among the $\bm{X}^d_{k,a}$ are variables caused by treatment, including lagged dependent variables. The relationships between the dependent and right-hand side variables in \eqref{eq:outcome} do not necessarily coincide across the samples.
 
 Let $\bm{Y}_k^d$ denote the vector of all outcomes at all ages for $k \in \{e, n \}$, when treatment status is fixed to $d$. Similarly, $\bm{X}_k^d$ is the vector of all causal predictors of $\bm{Y}_k^d$ at all ages. Both $\bm{Y}_k^d$ and $\bm{X}_k^d$ include the full set of outcomes over the life cycle, even though they are not sampled after age $a^*$. The background variables may have different distributions in the two samples. We denote the joint distribution of these vectors conditional on $\bm{B}_k = \bm{b}$ by $F_{\bm{Y}_k^d, \bm{X}_k^d | \bm{B}_k = \bm{b}}(\cdot,\cdot)$.
 
@@ -496,7 +496,7 @@ over $supp\left(\bm{Y}^d_{e,a}, \bm{B}_e\right)$.
 
 \subsubsection{Exogeneity}
 
-Conditions~\ref{cond:cond1}--\ref{cond:cond3} do not require that we take a position on the exogeneity of $\bm{X}^d_k, \: k \in \{e,n\}$. However, using economic theory to generate and interpret treatment effects, to test the validity of our synthetic control groups, and to use matching to find auxiliary sample counterparts to treatments and controls is easier under exogeneity assumptions. For these purposes, we assume:
+Conditions~\ref{cond:cond1}--\ref{cond:cond3} do not require that we take a position on the exogeneity of $\bm{X}^d_k, \: k \in \{e,n\}$. However, it is easier under exogeneity assumptions to use economic theory to generate and interpret treatment effects, to test the validity of our synthetic control groups, and to use matching to find auxiliary sample counterparts to treatments and controls. For these purposes, we assume:
 
 \onehalfspacing
 \begin{assumption}\label{ass:exog} \textbf{Exogeneity}\\
@@ -507,6 +507,8 @@ For all $a, a'' \in \{ 1, \ldots, A \}$ and for $d, d' \in \{0,1\}$,
 for all $\bm{b}$ in the support of $\bm{B}_k, \: k \in \{e,n\}$, for all outcomes $j \in \mathcal{J}_{a}$, where ``$\bm{M} \indep \bm{N}|\bm{Q}$'' denotes independence of $\bm{M}$ and $\bm{N}$ given $\bm{Q}$. $\square$
 \end{assumption}
 \doublespacing
+
+\noindent We test this Assumption in Appendix~\ref{app:endogeneity}.
 
 \subsubsection{Structural Invariance}
 
@@ -523,7 +525,7 @@ $\phi^d_{k,j,a}(\bm{x})$ is the function generating the causal effect of setting
 \end{assumption}
 \doublespacing
 
-This assumption has two messages that are helpful to distinguish: (i) the structural functions evaluated at the same arguments have identical values for treatment and control groups in the experimental sample. It also says (ii) that the structural relationships are identical in the experimental and auxiliary samples. As previously noted, exogeneity is not needed to satisfy any of Conditions~\ref{cond:cond1} through \ref{cond:cond3}. But in the absence of exogeneity, the relationship between the $\bm{X}^d_{k,a}$ and the errors $\varepsilon^d_{k,a}$ likely differs across samples because the randomization imparts a source of exogenous variation to the $\bm{X}^d_{e,a}$ not found in the non-experimental sample. Assumption~\ref{ass:summary} combined with Assumption~\ref{ass:exog}, Equations~\eqref{eq:countersystem}, and the assumption of a zero mean for the errors $(\mathbb{E}(\varepsilon^d_{k,j,a})=0)$ for all $a \in \{1,\dots,A\}, d \in \{0,1\}$ and $k \in \{e,n\}$ enable us to write:
+This assumption has two messages that are fruitful to distinguish: (i) the structural functions evaluated at the same arguments have identical values for treatment and control groups in the experimental sample. It also says (ii) that the structural relationships are identical in the experimental and auxiliary samples. As previously noted, exogeneity is not needed to satisfy any of Conditions~\ref{cond:cond1} through \ref{cond:cond3}. But in the absence of exogeneity, the relationship between the $\bm{X}^d_{k,a}$ and the errors $\varepsilon^d_{k,a}$ likely differs across samples because the randomization imparts a source of exogenous variation to the $\bm{X}^d_{e,a}$ not present in the non-experimental sample. Assumption~\ref{ass:summary} combined with Assumption~\ref{ass:exog}, Equations~\eqref{eq:countersystem}, and the assumption of a zero mean for the errors $(\mathbb{E}(\varepsilon^d_{k,j,a})=0)$ for all $a \in \{1,\dots,A\}, d \in \{0,1\}$ and $k \in \{e,n\}$ enable us to write:
 \begin{equation}\label{eq:invariancetest}
 \mathbb{E} \left[ Y_{k,j,a}^d | \bm{X}_{k,a}^d  = \bm{x}, \bm{B}_k = \bm{b}, D = d \right] = \mathbb{E} \left[ Y_{k,j,a} | \bm{X}^d_{k,a}  = \bm{x}, \bm{B}_k = \bm{b} \right],
 \end{equation}
@@ -552,13 +554,13 @@ Under Assumptions~\ref{ass:alignment}-\ref{ass:summary}, Condition~\ref{cond:con
 \end{theorem}
 \doublespacing
 
-\subsubsection{Using Matching to Construct Virtual Treatment and Comparison Groups}
-
-Under exogeneity assumption~\ref{ass:exog} and invariance condition~\ref{ass:summary} we can use matching to construct counterparts to treatment and control groups in the auxiliary sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} use this procedure.} We discuss this approach in Appendix~\ref{appendix:match}. Matching is one way to non-parametrically estimate the conditional mean functions.
-
 \subsubsection{Testing for Endogeneity}\label{section:accendog}
 
 In Appendix~\ref{app:endogeneity}, we investigate the question of endogeneity in the experimental and auxiliary samples. We follow \citet{Heckman_Pinto_etal_2013_PerryFactor} and assume that the $\varepsilon_{k,j,a}^d$ obey a factor structure, $k \in \{e,n\}$. We develop that framework and provide evidence supporting exogeneity in both samples.
+
+\subsubsection{Using Matching to Construct Virtual Treatment and Comparison Groups}
+
+Under exogeneity assumption~\ref{ass:exog} and invariance condition~\ref{ass:summary} we can use matching to construct counterparts to treatment and control groups in the auxiliary sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} use this procedure.} We discuss this approach in Appendix~\ref{appendix:match}. Matching is one way to non-parametrically estimate the conditional mean functions. There is close agreement between non-parametric estimates based on matching and more parametric approaches (see Appendix C.3.3.1).
 
 \subsection{Predicting Parental Income} \label{section:pincome}
 
@@ -632,11 +634,15 @@ Follow-up data on educational attainment were collected through age 30. In Appen
 
 \section{Benefit/Cost Analysis} \label{section:cbaresults}
 
-This section reports cost/benefit and rate of return analyses underlying Figure~\ref{figure:main}. Appendix~\ref{appendix:sensitivity} displays an extensive sensitivity analysis of each of the components we consider in our main results. It includes scenarios in which all our assumptions hold and scenarios in which they are drastically violated, providing bounds for our estimates.
+This section reports cost/benefit and rate of return analyses underlying Figure~\ref{figure:main}. Appendix~\ref{appendix:sensitivity} displays an extensive sensitivity analysis of each of the components we consider. It includes scenarios in which all our assumptions hold and scenarios in which they are drastically violated, providing bounds for our estimates.
 
 \subsection{Program Costs} \label{section:programscosts}
 
 The yearly cost of the program was \$18,514 per participant in 2014 USD. We improve on previous cost estimates using primary-source documents.\footnote{Our calculations are based on progress reports written by the principal investigators and related documentation recovered in the archives of the research center where the program was implemented. We display these sources in Appendix \ref{app:programcosts}. The main component is staff costs. Other costs arise from nutrition and services that the subjects receive when they were sick, diapers during the first 15 months of their lives, and transportation to the center. The control-group children also receive diapers during approximately 15 months, and iron-fortified formula. The costs are based on sources describing ABC treatment for $52$ children. We use the same costs estimates for CARE, for which there is less information available. The costs exclude any expenses related to research or policy analysis. A separate calculation by the implementers of the program indicates almost an identical amount (see Appendix~\ref{app:programcosts}).}
+
+\subsection{Benefit/Cost Estimates}
+
+Table~\ref{table:bcsens} presents our baseline estimates of benefit/cost ratios, Table~\ref{table:irrsens} presents the analogous internal rates of return. Pooling males and females, the results indicate that the program is socially efficient: the internal rate of return and the benefit/cost ratio are $12.6\%$ and $5.7$. \textit{The program generates a benefit of $5.7$ dollars for every dollar spent on it}. These estimates are statistically significant, even after accounting for sampling variation, serial correlation, and prediction error in the experimental and auxiliary samples and the tax costs of financing the program. These results are important because ABC/CARE was much more expensive than other early childhood education programs---the treatment involved more services over a longer time period \citep{Elango_Hojman_etal_2016_Early-Edu}.
 
 \newgeometry{top=.4in, bottom=.5in, left=.4in, right=.4in}
 \begin{sidewaystable}[!htpb]
@@ -669,11 +675,7 @@ The yearly cost of the program was \$18,514 per participant in 2014 USD. We impr
 \restoregeometry
 \doublespacing
 
-\subsection{Benefit/Cost Estimates}
-
-Table~\ref{table:bcsens} presents our baseline estimates of benefit/cost ratios, Table~\ref{table:irrsens} presents the analogous internal rates of return. Pooling males and females, the results indicate that the program is socially efficient: the internal rate of return and the benefit/cost ratio are $12.6\%$ and $5.7$. \textit{The program generates a benefit of $5.7$ dollars for every dollar spent on it}. These estimates are statistically significant, even after accounting for sampling variation, serial correlation, and prediction error in the experimental and auxiliary samples and the tax costs of financing the program. These results are important because ABC/CARE was much more expensive than other early childhood education programs---the treatment involved more services over a longer time period \citep{Elango_Hojman_etal_2016_Early-Edu}.
-
-We accompany these estimates with a set of sensitivity checks of statistical and economic interest. Our estimates are not driven by our methods for accounting for attrition and item non-response or by the conditioning variables we use when computing the net-present values. Although the internal rate of return remains relatively high when using participant outcome measures up to ages 21 or 30, the benefit/cost ratios indicate that accounting for benefits that go beyond age 30 is relevant. The return to each dollar is at most $3/1$ when considering benefits up to age 30 only (prediction span columns). The counterfactual comparisons made also matter. Males benefit the most from ABC/CARE relative to attending alternative childcare centers, while females benefit the most from ABC/CARE relative to staying at home. We explore this difference below.
+We accompany these estimates with a set of sensitivity checks of statistical and economic interest. Our estimates are not driven by our methods for accounting for attrition and item non-response or by the conditioning variables we use when computing the net-present values. Although the internal rate of return remains relatively high when using participant outcome measures up to ages 21 or 30, the benefit/cost ratios indicate that accounting for benefits that go beyond age 30 is relevant. The return to each dollar is at most $3/1$ when considering benefits up to age 30 only (prediction span columns). Controlling for treatment substitutes available to controls also matters. Males benefit the most from ABC/CARE relative to attending alternative childcare centers, while females benefit the most from ABC/CARE relative to staying at home. We explore this difference below.
 
 Our baseline estimates account for the deadweight caused by the government by taxing individuals to budget its expenditure for all government-related activities.\footnote{When the transaction between the government and an individual is a direct transfer, we consider .5 as a cost per each transacted dollar as we do not weight the final recipient of the transaction (e.g., transfer income). When the transaction is indirect, we classify it as government spending as a whole and consider its cost as 1.5 per each dollar spend (e.g. public education).} Our baseline estimate assumes that the marginal tax rate is $50\%$. Our estimates are robust to dropping it to $0\%$ or doubling it to $100\%$ (deadweight loss columns). Our baseline estimate of benefit/cost ratios is based on a discount rate of $3\%$. Not discounting roughly doubles our benefit/cost ratios, while they remain significant under a higher discount rate of $7\%$ (discount rate columns).
 
@@ -681,7 +683,7 @@ Parental income is an important component of the benefit/cost ratio. We take a c
 
 Alternative approaches considering the gain for the parents through age 65 generate an increase in the gain due to parental income (parental income columns). As we noted in Section~\ref{section:cbamethodology}, our estimates ignore any cohort effects. Individuals in ABC/CARE could experience positive cohort effects that might (i) make them more productive and therefore experience wage growth \citep{Lagakos_Moll_etal_2016_LifeCycle_NBER}; (ii) experience a negative shock such as an economic crisis and therefore experience a wage decline \citep{Jarosch_2016_JobSecurity_Econometrica}. Our estimates are robust when we vary annual growth and decay rates between $-.5\%$ to $.5\%$.
 
-We do not perform sensitivity analysis to investigate cohort effects of health costs. Treatment individuals are healthier, which reduces medical costs, but also that they live longer, increasing medical costs. These opposing effects negate each other. We have little guidance on predicting the future health costs and benefits of our cohort compared to the cohorts on which FAM is based.
+We do not conduct sensitivity analysis to investigate alternative plausible cohort effects of health costs. Treated individuals are healthier. They reduce medical costs. But they also live longer, increasing medical costs. These opposing effects tend to negate each other \citep{Goldman_etal_2015_Future-America-Model}. \textbf{[JJH: Exactly? Cite?] [JLG: Yes, it is actually almost exactly in our estimates.]} We have little guidance on predicting the future health costs and benefits of our cohort compared to the cohorts on which FAM is based.
 
 We also examine the sensitivity of our estimates to (i) dropping the most costly crimes such as murders and rapes;\footnote{Two individuals in the treatment group committed a rape and one individual in the control group committed a murder.} and (ii) halving the costs of victimization and judiciary costs related to crime. The first sensitivity check is important because we would not want our calculation to be based on a few exceptional crimes. The second is important because victimization costs are somewhat subjective (see Appendix~\ref{appendix:crime}). Our benefit/cost analysis is robust to these adjustments, even when crime is a major component. Lastly, we examine the sensitivity with respect to our main health component: quality-adjusted life years. This is an important component because relatively healthier individuals survive longer and healthier, and treatment improves health conditions. It is important to note that this component largely accumulates later in life and therefore it is heavily discounted. Dropping the component or doubling the value of life does not have a major impact on our calculations.
 
@@ -702,7 +704,7 @@ We also examine the sensitivity of our estimates to (i) dropping the most costly
 
 The estimates are robust when we conduct a drastic sensitivity analysis by removing components of the benefit/cost analysis entirely (Table~\ref{table:cba}).\footnote{In Appendix~\ref{appendix:sensitivity}, we present exercises that are not as drastic as removing the whole component, but instead removing fractions of it.} Even when completely removing the gain associated with crime for males, the program is socially efficient. Both the internal rate of return and the benefit/cost ratio are substantial. Parental income and crime are the components for which the internal rate of return and the benefit/cost ratio are the most sensitive. The reason for the sensitivity to parental income is that the amount is substantial and it is not heavily discounted because it accumulates during the first $21$ years of the children's life.\footnote{Depending on views about choice of individuals in labor markets, parental income should be excluded or included. If markets are neoclassical, the marginal value of foregone leisure is the wage and our our measure of parental income overstates the benefits of working. If nonemployment is involuntary, the full benefits should be counted.} Crime occurs later in life and its benefits are discounted accordingly. The amount due to crime savings is large so removing it diminishes both the internal rate of return and the benefit/cost ratio (but they remain statistically significant).
 
-\textit{Our sensitivity analyses indicate that no single category of outcomes drives the social efficiency of the program. It is the life-cycle benefits across multiple dimensions of human development.}
+\textit{Our sensitivity analyses indicate that no single category of outcomes drives the social efficiency of the program. Rather, it is the life-cycle benefits across multiple dimensions of human development.}
 
 In Appendix~\ref{appendix:bcaestimates} we use our analysis to examine the empirical foundations of recent cost-benefit studies of early childhood programs that use short term estimates of experimental test score gains coupled with auxiliary estimates of the impact of test scores on earnings (see, e.g., work by \citealp{Kline_Walters_2016_QJE}). We show that this approach applied to the ABC data greatly understates the true benefit-cost ratio because (a) earnings are only forecast through a young age (27) and (b) benefits extend beyond earnings. The difference is sizable. Applying the Kline and Walters method to the ABC/CARE experiment, we would find a cost-benefit ratio of 1.4 compared to our estimate of 5.7.
 
@@ -727,15 +729,15 @@ Note: This figure displays the life-cycle net present values of the main compone
 
 \subsection{Possible Explanations for Gender Differences}
 
-The benefit/cost ratio and internal rate of return calculations both indicate that males and females benefit \emph{differently} from the program compared to the alternatives ``$H$'' and ``$C$''. There are two complementary stories that explain this difference. First, we explore reasons why the differences could exist if we focus on the outcomes we are monetizing, and not on the counterfactual we are studying. Males have relatively high benefits from outcomes that we are able to monetize: labor income and crime are two examples of this. Historically, females are less likely to supply labor than males. While all males supply labor in our sample at age 30, not all females supply labor. We are not able to quantify household production benefits to the treated males and females. This is an important omission for females who decide to stay at home instead of work.
+The benefit/cost ratio and internal rate of return calculations both indicate that males and females benefit \emph{differently} from the program compared to the alternatives ``$H$'' and ``$C$''. There are two complementary stories that explain this difference. First, we explore reasons why the differences could exist if we simply consider the outcomes we are monetizing, and not the particular counterfactuals we estimate. Males have relatively high benefits from outcomes that we are able to monetize: labor income and crime are two examples of this. Historically, females are less likely to supply labor than males. While all males supply labor in our sample at age 30, not all females supply labor. We are not able to quantify household production benefits to the treated males and females. This is an important omission for females who decide to stay at home instead of work.
 
-Males are much more likely to commit crimes that are more costly to the victims and to the judiciary system \citep{Cohen-Bowles_2010_Estimating-Cost-Crime,Gregg_etal_2015_SocialRealities_BOOK}. ABC/CARE also has treatment effects on crime for females for a number of categories (see Appendix~\ref{appendix:results}). However, males commit crimes that are much more expensive. These two categories are examples of why the magnitudes of the gains are much higher for males than they are for females.
+Males are much more likely to commit crimes that are more costly to the victims and to the criminal justice system \citep{Cohen-Bowles_2010_Estimating-Cost-Crime,Gregg_etal_2015_SocialRealities_BOOK}. ABC/CARE also has treatment effects on crime for females for a number of categories (see Appendix~\ref{appendix:results}). However, males commit crimes that are much more expensive. These two categories are examples of why the magnitudes of the gains are much higher for males than they are for females.
 
 For health, there are also substantial gender differences. Both males and females have substantial gains: males on more standard measures of physical health, while females on a set of mental health measures (see Appendix~\ref{appendix:results}). We quantify both components (see Section~\ref{section:health} and Appendix~\ref{appendix:health}).
 
-When analyzing different counterfactuals, there is a substantial difference between males and females. The difference is driven by one of the counterfactuals: treatment vs. alternative preschools. The estimates for both males and females generate a similar estimated ABC/CARE treatment effect compared to staying at home. Males benefit much more from treatment relative to alternative preschools compared to their benefits from treatment relative to staying at home. This result is consistent with findings noted elsewhere: (i) stark gender differences resulting from attending low quality childcare \citep{Kottelenberg-Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects}; and (ii) females are less sensitive to uncertain environments \citep{Autor-etal_2015_Family-Disadvantage}. The program substantially reduced the costs of special education for boys.
+Second, when analyzing different counterfactuals, there is a substantial difference between males and females. The difference is driven by one of the counterfactuals: treatment vs. alternative preschools. The estimates for both males and females generate a similar estimated ABC/CARE treatment effect compared to staying at home. Males benefit much more from treatment relative to alternative preschools compared to their benefits from treatment relative to staying at home. This result is consistent with findings noted elsewhere: (i) stark gender differences resulting from attending low quality childcare \citep{Kottelenberg-Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects}; and (ii) females are less sensitive to uncertain environments \citep{Autor-etal_2015_Family-Disadvantage}. The program substantially reduced the costs of special education for boys.
 
-Our evidence does not indicate that the program has no benefit for females. In fact it does. When compared to staying at home, the gain for females indicates that there is a gain of $4.81$ dollars per each dollar invested. In fact, when we decompose the net-present value for each of the components that we monetize, we see substantial benefits for females across a variety of categories, including health and crime. For males, the magnitudes are noticeably increased when comparing treatment to alternative preschool (see Figure~\ref{fig:npvsgender}).
+Our evidence does not indicate that the program has no benefit for females. In fact it does. When compared to staying at home, the gain for females indicates that there is a gain of $4.81$ dollars per each dollar invested. When we decompose the net-present value for each of the components that we monetize, we find substantial benefits for females across a variety of categories, including health and crime. For males, the magnitudes are noticeably increased when comparing treatment to alternative preschool (see Figure~\ref{fig:npvsgender}).
 
 \section{Summary} \label{section:conclusion}
 
