all edits to appendix

--- a/AppOutput/Methodology/model_select_pooled.tex
+++ b/AppOutput/Methodology/model_select_pooled.tex
@@ -1,6 +1,6 @@
 % CONTENT CREATED ON SPREADSHEET, TREAT AS A .CSV (TAB DELIMITED)
 % CAN BE COPIED INTO A SPREADSHEET PROGRAM (EXCEL, LIBRECALC) FOR EDITING
-\tiny
+\footnotesize
 \begin{tabular}{l r r l l l}
 \toprule											
 Variable	&	Age	&	Obs.	&	(1)	&	(2)	&	(3)	\\
