--- a/AppOutput/Methodology/nonipw_vars.tex
+++ b/AppOutput/Methodology/nonipw_vars.tex
@@ -8,7 +8,7 @@ IQ Standard Score	&	2, 3, 4, 5, 6, 7, 8, 12, 15, 21	\\
 PIAT Math Standard Score	&	7	\\
 Home Total Score	&	0.5, 1.5, 2.5, 3.5, 4.5, 8	\\
 Mother Works	&	2, 3, 4, 5	\\
-Bio. Mother's Education Level	&	2, 3, 4, 5, 9	\\
+Biological Mother's Education Level	&	2, 3, 4, 5, 9	\\
 Father is Home	&	2, 3, 4, 5	\\
 Ever Adopted	&		NA \\
 Graduated High School	&	NA	\\
