--- a/Appendices/VSensitivity.tex
+++ b/Appendices/VSensitivity.tex
@@ -1,8 +1,8 @@
 \section{Sensitivity of Treatment Effects to the Definition of Control Substitution} \label{appendix:vsensitivity}
 
-\noindent In the main paper, we let $V$ be a dummy variable indicating whether or not the child attended alternative childcare arrangements. As we show in Section~\ref{section:background}, this dummy variable is a summary of a more complex reality in which children attend alternatives different months between ages 0 to 5. In this appendix, we explore three different alternative definitions of $V$: we let $V$ indicate if children attend alternatives (i) $2/5$ of the time between ages 0 to 5; (ii) $3/5$ of the time between ages 0 to 5; and (iii) $4/5$ of the time between ages 0 to 5. For each of these cases, we present a summary table of treatment effects analogous to Table~\ref{table:tescombined} in the main paper.\\
+\noindent In the main paper, we let $V$ be a dummy variable indicating whether or not the child attended alternative childcare arrangements. As we discuss in Section~\ref{section:background}, this dummy variable is a summary of a more complex reality in which children attend alternatives different months between ages 0 to 5. In this appendix, we explore three different alternative definitions of $V$: we let $V$ indicate if children attend alternatives (i) $2/5$ of the time between ages 0 to 5; (ii) $3/5$ of the time between ages 0 to 5; and (iii) $4/5$ of the time between ages 0 to 5. For each of these cases, we present a summary table of treatment effects analogous to Table~\ref{table:tescombined} in the main paper.\\
 
-\noindent The results are robust to the decision of modeling $V$ in a way such that what matters is the extensive margin decision to enroll children into alternative childcare arrangements, and not the intensive margin decision of the number of months they attend between ages 0 to 5.
+\noindent The results are robust to different choices for modeling $V$. What matters is the extensive margin decision to enroll children into alternative childcare arrangements, and not the intensive margin decision of the number of months they attend between ages 0 to 5.
 
 \newgeometry{top=.6in, bottom=.8in, left=.8in, right=.8in}
 \begin{table}[!htbp]
