--- a/output/abccare_endogdurb_si30y_inc_trans_pub_scont_ready.tex
+++ b/output/abccare_endogdurb_si30y_inc_trans_pub_scont_ready.tex
@@ -6,7 +6,8 @@ PIAT (5-7) &            . &            . &            . &            . &        
 Education (30) &            . &            . &            . &            . &      -684.75 &         0.99 &      -693.44 &         0.91 \\  
 Labor Income (21) &            . &            . &            . &            . &        -0.14 &         0.99 &        -0.15 &         0.93 \\  
 Cognitive &            . &            . &      -348.53 &         0.69 &            . &            . &     1,696.96 &         0.13 \\  
-Non Cognitive &            . &            . &     1,622.92 &         0.05 &            . &            . &       887.17 &         0.19 \\  \\ \midrule 
+Non Cognitive &            . &            . &     1,622.92 &         0.05 &            . &            . &       887.17 &         0.19 \\  
+Constant &     6,664.39 &         0.11 &     6,614.39 &         0.18 &     9,942.56 &         0.18 &    22,736.59 &         0.10 \\  \\ \midrule 
 $R^2$ &          \multicolumn{2}{c}{0.04} &             \multicolumn{2}{c}{0.15} &            \multicolumn{2}{c}{0.21} &              \multicolumn{2}{c}{0.27}   \\  
 Observations &         \multicolumn{2}{c}{68} &                 \multicolumn{2}{c}{52} &               \multicolumn{2}{c}{70}  &                \multicolumn{2}{c}{70}   \\  \\ \midrule
 $F$-stat: exclude Cognitive, Non-Cognitive  &                 \multicolumn{4}{c}{3.38} &              \multicolumn{4}{c}{2.42}  \\  
