all results are up to date

--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -1,33 +1,33 @@
 \begin{tabular}{>{\bfseries}lcc|cc|cc} \toprule
 	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\ 
-Baseline	&	\multicolumn{2}{c}{5.69 (s.e. 2.32)}	&	\multicolumn{2}{c}{11.62 (s.e. 5.49)}	&	\multicolumn{2}{c}{2.60 (s.e. 0.98)}	\\ \\
+Baseline	&	\multicolumn{2}{c}{5.72 (s.e. 2.38)}	&	\multicolumn{2}{c}{11.44 (s.e. 5.60)}	&	\multicolumn{2}{c}{2.70 s.e. 0.99)}	\\ \\
 \multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to predicted death, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\	
 \multicolumn{7}{l}{\textit{income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
 Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
-	&	\textbf{6.17}	&	\textbf{5.35}	&	\textbf{11.94} 	&	\textbf{10.74}	&	\textbf{2.91}	&	\textbf{2.79}	\\
-	&	(2.35)	&	(2.04)	&	(6.14)	&	(4.12)	&	(0.97)	&	(0.81)	\\ \midrule
+	&	\textbf{6.15}	&	\textbf{5.30}	&	\textbf{11.87}	&	\textbf{10.34}	&	\textbf{3.01}	&	\textbf{2.84}	\\
+	&	(2.43)	&	(2.07)	&	(6.28)	&	(3.93)	&	(0.98)	&	(0.82)	\\ \midrule
 Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
-Span	&	\textbf{1.55}	&	2.01	&	\textbf{2.17}	&	2.80	&	1.17	&	1.52	\\
-	&	(0.39)	&	(0.88)	&	(0.74)	&	(1.96)	&	(0.43)	&	(0.48)	\\ \midrule
+Span	&	\textbf{1.56}	&	1.99	&	2.00	&	2.61	&	1.30	&	1.62	\\
+	&	(0.37)	&	(0.87)	&	(0.76)	&	(1.96)	&	(0.45)	&	(0.50)	\\ \midrule
 Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
-factuals	&	\textbf{4.44}	&	\textbf{6.58}	&	3.88	&	\textbf{10.85}	&	\textbf{4.89}	&	\textbf{2.40}	\\
-	&	(1.68)	&	(2.22)	&	(2.78)	&	(4.14)	&	(1.50)	&	(0.94)	\\ \midrule
+factuals	&	\textbf{4.47}	&	\textbf{6.59}	&	4.47	&	\textbf{10.69}	&	\textbf{4.93}	&	\textbf{2.37}	\\
+	&	(1.67)	&	(2.13)	&	(3.09)	&	(4.15)	&	(1.50)	&	(0.94)	\\ \midrule
 Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	\\
-loss	&	\textbf{8.50}	&	\textbf{4.29}	&	\textbf{17.43}	&	\textbf{8.71}	&	\textbf{3.69}	&	2.06	\\
-	&	(3.47)	&	(1.75)	&	(8.19)	&	(4.14)	&	(1.43)	&	(0.79)	\\ \midrule
+loss	&	\textbf{8.53}	&	\textbf{4.32}	&	\textbf{17.20}	&	\textbf{8.56}	&	\textbf{3.80}	&	\textbf{2.16}	\\
+	&	(3.56)	&	(1.80)	&	(8.37)	&	(4.23)	&	(1.44)	&	(0.80)	\\ \midrule
 Discount 	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	\\
-Rate	&	13.38	&	2.40	&	29.50	&	4.21	&	5.34	&	1.43	\\
-	&	7.01	&	0.80	&	15.93	&	1.88	&	3.81	&	0.37	\\ \midrule
+Rate	&	\textbf{13.48}	&	\textbf{2.39}	&	\textbf{29.58}	&	\textbf{4.07}	&	5.46	&	1.50	\\
+	&	(7.18)	&	(0.82)	&	(16.34)	&	(1.89)	&	(3.78)	&	(0.38)	\\ \midrule
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
-Income	&	\textbf{5.92}	&	\textbf{5.60}	&	\textbf{11.80}	&	\textbf{12.36}	&	\textbf{2.88}	&	\textbf{3.27}	\\
-	&	(2.32)	&	(2.39)	&	(5.49)	&	(5.68)	&	(1.02)	&	(1.21)	\\ \midrule
+Income	&	\textbf{5.95}	&	\textbf{6.15}	&	\textbf{11.63}	&	\textbf{11.93}	&	\textbf{2.98}	&	\textbf{3.25}	\\
+	&	(2.39)	&	(2.48)	&	(5.60)	&	(5.69)	&	(1.03)	&	1.14	\\ \midrule
 Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
-Income	&	\textbf{5.48}	&	\textbf{5.90}	&	\textbf{10.76}	&	\textbf{12.49}	&	\textbf{2.47}	&	\textbf{2.74}	\\
-	&	(2.25)	&	(2.41)	&	(5.33)	&	(5.71)	&	(0.87)	&	(1.10)	\\ \midrule
+Income	&	\textbf{5.51}	&	\textbf{5.92}	&	\textbf{10.60}	&	\textbf{12.29}	&	\textbf{2.57}	&	\textbf{2.84}	\\
+	&	(2.31)	&	(2.47)	&	(5.47)	&	(5.81)	&	(0.88)	&	1.11	\\ \midrule
 Crime	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	\\
-	&	\textbf{5.14} 	&	\textbf{4.07}	&	\textbf{11.82}	&	\textbf{8.33}	&	\textbf{2.72}	&	2.25	\\
-	&	(2.30)	&	(1.50)	&	(5.59)	&	(3.64)	&	(1.04)	&	(0.95)	\\ \midrule
+	&	\textbf{5.17}	&	\textbf{4.09}	&	\textbf{11.79}	&	\textbf{8.19}	&	\textbf{2.80}	&	\textbf{2.34}	\\
+	&	(2.37)	&	(1.56)	&	(5.43)	&	(3.69)	&	(1.07)	&	0.96	\\
 Health	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	\\
-(QALYs)	&	\textbf{4.85}	&	\textbf{6.56}	&	\textbf{10.61}	&	\textbf{12.63}	&	\textbf{2.48}	&	2.73	\\
-	&	(2.32)	&	(2.54)	&	(5.37)	&	(5.90)	&	(0.97)	&	(1.26)	\\ \bottomrule
+(QALYs)	&	\textbf{4.82}	&	\textbf{6.62}	&	\textbf{10.26}	&	\textbf{12.65}	&	\textbf{2.57}	&	\textbf{2.83}	\\
+	&	(2.32)	&	(2.64)	&	(5.46)	&	(6.13)	&	(0.99)	&	1.27	\\ \bottomrule
 \end{tabular} 
