--- a/AppOutput/Methodology/model_select_pooled.tex
+++ b/AppOutput/Methodology/model_select_pooled.tex
@@ -3,7 +3,7 @@
 \footnotesize
 \begin{tabular}{l r r l l l}
 \toprule											
-Variable	&	Age	&	Obs.	&	(1)	&	(2)	&	(3)	\\
+Partially Observed Outcomes	&	Age	&	N	&	\multicolumn{3}{c}{Variables Used to Produce IPW}	\\
 \midrule											
 Parental Labor Income	&	1.5	&	112	& Mother's Age at Baseline	& APGAR 1 min.	&  Cohort \\
  Parental Labor Income	&	2.5	&	112	&	Mother's Age at Baseline	& APGAR 1 min.	&  Cohort \\
