--- a/AppOutput/Methodology/nonipw_vars.tex
+++ b/AppOutput/Methodology/nonipw_vars.tex
@@ -2,7 +2,7 @@
 % CAN BE COPIED INTO A SPREADSHEET PROGRAM (EXCEL, LIBRECALC) FOR EDITING
 \begin{tabular}{l l}
 \toprule
-Variable	&	Age	\\
+Completely Observed Outcomes	&	Age	\\
 \midrule			
 IQ Standard Score	&	2, 3, 4, 5, 6, 7, 8, 12, 15, 21	\\
 PIAT Math Standard Score	&	7	\\
